<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AboutFragment">

    <!-- Main -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_height="wrap_content">

            <!-- Player Info -->
            <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/labelPlayerName"/>

                <TextView
                        android:id="@+id/txtPlayerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBackgroundButton"
                        android:text="@string/labelRankingPlayerName"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/labelRakingPoints"/>

                <TextView
                        android:id="@+id/txtPointsResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBackgroundButton"
                        android:text="@string/labelDefaultPoints"/>

            </LinearLayout>

            <!-- Image Icon -->
            <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/pokemon_vs"
                    android:layout_marginStart="20dp"
                    android:tooltipText="@string/playGame"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>