<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             tools:context=".AboutFragment">

    <ImageView
            android:id="@+id/imgHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/pokemon_main"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="5dp">

        <Button
                android:id="@+id/btnPlayGame"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/playGame"
                android:layout_marginHorizontal="1dp"
                android:background="@color/colorBackgroundButton"
                android:textColor="@color/colorTextButton"/>

        <Button
                android:id="@+id/btnRanking"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/rankingPlayers"
                android:layout_marginHorizontal="1dp"
                android:background="@color/colorBackgroundButton"
                android:textColor="@color/colorTextButton"/>

        <Button
                android:id="@+id/btnAbout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/aboutGame"
                android:layout_marginHorizontal="1dp"
                android:background="@color/colorBackgroundButton"
                android:textColor="@color/colorTextButton"/>

        <Button
                android:id="@+id/btnLogout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/labelLogout"
                android:layout_marginHorizontal="1dp"
                android:background="@color/colorBackgroundButton"
                android:textColor="@color/colorTextButton"/>

    </LinearLayout>


</FrameLayout>