<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             tools:context=".AboutFragment">

    <!-- Main -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <!-- Header points and orientation -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/txtTotalPoints"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="300dp"
                        android:textColor="@color/colorBackgroundButton"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:text="@string/labelDefaultPoints"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        android:textColor="@color/colorBackgroundButton"
                        android:text="@string/labelPoints"/>


            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="20dp"
                        android:textSize="15dp"
                        android:text="@string/gameOrientation"/>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="5dp"
                        android:background="@color/colorBackgroundButton"/>

            </LinearLayout>


        </LinearLayout>

        <!-- Choose the card to play -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

            <ImageButton
                    android:id="@+id/btnFire"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/pokemon_fire"/>

            <ImageButton
                    android:id="@+id/btnWater"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/pokemon_water"/>

            <ImageButton
                    android:id="@+id/btnGrass"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/pokemon_grass"/>

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="20dp"
                android:background="@color/colorBackgroundButton"/>

        <!-- Player vs Machine Result -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/imgPlayer"
                        android:layout_width="120dp"
                        android:layout_height="150dp"
                        android:src="@drawable/pokemon_fire"/>

                <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/labelPlayer"/>

            </LinearLayout>

            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="150dp"
                    android:layout_marginHorizontal="30dp"
                    android:src="@drawable/pokemon_vs"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/imgMachine"
                        android:layout_width="120dp"
                        android:layout_height="150dp"
                        android:src="@drawable/pokemon_fire"/>

                <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/labelMachine"/>

            </LinearLayout>

        </LinearLayout>


        <!-- Message Result -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="50dp"
                android:orientation="horizontal">

            <TextView
                      android:id="@+id/txtResultMsg"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textAlignment="center"
                      android:textColor="@color/colorTextButton"
                      android:textSize="20dp"
                      android:fontFamily="sans-serif-smallcaps"
                      android:text="@string/labelResultDefault"/>

        </LinearLayout>


        <!-- End the game and back to home page -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/btnPlay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/backHome"
                    android:background="@color/colorBackgroundButton"
                    android:textColor="@color/colorTextButton"/>

        </LinearLayout>

    </LinearLayout>


</FrameLayout>